# BaremetalImproved

./: .gitignore  CMakeLists.txt  Creating-Autopilot_AMP_Improved  Dockerfile  compose.win.yml  compose.yml  vivado.jou  vivado_pid17745.str  vivado_pid19176.str
src/: CMakeLists.txt
src-control/control/test/: CMakeLists.txt  test-TiltCorrection.cpp
src-shared/: CMakeLists.txt
src-shared/include/matrix/: Array.hpp
src-shared/include/vivado-types/: OutputTypes.hpp  SensorTypes.hpp
src-vivado/: CMakeLists.txt  README.md  lscript.ld
src-vivado/include/: PublicHardwareConstants.hpp
src-vivado/include/output/: Buzzer.hpp  Motors.hpp  WPT.hpp
src-vivado/include/platform/: AxiGpio.hpp  IIC.hpp  Interrupt.hpp  Platform.hpp
src-vivado/include/sensors/: AHRS.hpp  IMU.hpp  RC.hpp  Sonar.hpp
src-vivado/main/: AxiGpio.cpp  AxiGpio.hpp  CMakeLists.txt  HardwareConstants.hpp  HardwareRegisters.hpp  Interrupt.cpp  Interrupt.hpp  LEDs.cpp  Main.cpp  MainInterrupt.cpp  MainInterrupt.hpp  Platform.cpp  Platform.hpp  interrupt.hpp  main.cpp  platform.hpp
src-vivado/main/include/: AxiGpio.hpp  Interrupt.hpp  Platform.hpp  PublicHardwareConstants.hpp
src-vivado/main/src/: AxiGpio.cpp  HardwareConstants.hpp  IIC.cpp  IIC.hpp  Interrupt.cpp  Platform.cpp  PrivateHardwareConstants.hpp
src-vivado/output/: CMakeLists.txt
src-vivado/output/buzzer/: CMakeLists.txt
src-vivado/output/motors/: CMakeLists.txt
src-vivado/output/wpt/: CMakeLists.txt
src-vivado/sensors/: CMakeLists.txt
src-vivado/sensors/ahrs/: AHRS.cpp  AHRS.hpp  CMakeLists.txt  MadgwickFilter.cpp  MadgwickFilter.hpp
src-vivado/sensors/imu/: CMakeLists.txt  IMU.cpp  IMU.hpp  LSM9DS1_Registers.h
src-vivado/sensors/rc/: CMakeLists.txt  RC.cpp  RC.hpp
src-vivado/sensors/sonar/: CMakeLists.txt  MedianFilter.cpp  MedianFilter.hpp  Sonar.cpp  Sonar.hpp
src-vivado/src/: PrivateHardwareConstants.hpp  PublicHardwareConstants.cpp
src-vivado/src/output/: Buzzer.cpp  Motors.cpp  WPT.cpp
src-vivado/src/platform/: AxiGpio.cpp  GetTimeOfDay.cpp  IIC.cpp  IIC.hpp  Interrupt.cpp  Platform.cpp
src-vivado/src/sensors/: AHRS.cpp  IMU.cpp  IMUTypes.hpp  LSM9DS1Def.hpp  LSM9DS1_Registers.h  MadgwickFilter.cpp  MadgwickFilter.hpp  MedianFilter.cpp  MedianFilter.hpp  RC.cpp  Sonar.cpp
src-vivado/time/: CMakeLists.txt  GetTimeOfDay.cpp
src/communication/: CMakeLists.txt  README.md  To-Implement.md
src/communication/include/: BaremetalCommunicationDef.hpp  LogEntry.h  SharedStruct.hpp  communication.hpp  logger.drone.hpp
src/communication/src/: GetLogData.cpp  communication.cpp  logger.drone.cpp
src/control/: CMakeLists.txt  README.md
src/control/altitude/: CMakeLists.txt  README.md  To-Implement.md
src/control/attitude/: CMakeLists.txt  README.md  To-Implement.md
src/control/autonomous/: CMakeLists.txt  README.md  To-Implement.md
src/control/codegen/: Codegen.asv  Codegen.m  Codegen.sh  ExportParamsAndMatrices.m  GenerateAltitudeController.m  GenerateAltitudeObserver.m  GenerateAttitudeController.m  GenerateAttitudeObserver.m  GenerateNavigationController.m  GenerateNavigationObserver.m  GeneratePositionController.m  GeneratePositionControllerBlind.m  GeneratePositionObserverBlind.m  GetParamsAndMatrices.m  GetStructParameterName.m  Makefile  Makefile.common  ReplaceWithStructParameterName.m  dlqi.m  quat_params.m
src/control/include/: Altitude.hpp  AltitudeCodegen.h  Attitude.hpp  AttitudeCodegen.hpp  Autonomous.hpp  Motors.h  Motors.hpp  Motors.hpp~  Position.hpp  QRFSM.hpp  TiltCorrection.hpp  TiltCorrection.hpp~
src/control/motors/: CMakeLists.txt  README.md  To-Implement.md
src/control/position/: CMakeLists.txt  README.md  To-Implement.md
src/control/src/: Altitude.cpp  Attitude.cpp  AttitudeCodegen.cpp  Autonomous.cpp  Motors.c  Motors.cpp  Position.cpp  TiltCorrection.cpp  TiltCorrection.cpp~
src/control/src-generated/: AltitudeCodegen.cpp  AttitudeCodegen.cpp  PositionCodegen.cpp
src/control/templates/: AltitudeCodegenTemplate.cpp  AttitudeCodegenTemplate.cpp  PositionCodegenTemplate.cpp
src/globals/: CMakeLists.txt
src/globals/include/: ControllerInstances.hpp  Globals.h  Globals.hpp  MiscInstances.hpp  RCTypes.hpp  SharedMemoryInstances.hpp  SoftwareConstants.hpp
src/globals/src/: ControllerInstances.cpp  Globals.c  Globals.cpp  MiscInstances.cpp  SharedMemoryInstances.cpp
src/greet/: CMakeLists.txt
src/init/: CMakeLists.txt
src/init/src/: Init.cpp
src/instances/: CMakeLists.txt
src/instances/include/: ControllerInstances.hpp  MiscInstances.hpp  SharedMemoryInstances.hpp
src/instances/src/: ControllerInstances.cpp  MiscInstances.cpp  SharedMemoryInstances.cpp
src/logger/: CMakeLists.txt
src/main/: CMakeLists.txt  README.md
src/main/include/: Main.hpp  MainFSM.hpp  MainInterrupt.hpp  main-FSM.hpp  main-interrupt.hpp  main.hpp
src/main/src/: Init.cpp  LEDs.cpp  Main.cpp  MainFSM.cpp  MainInterrupt.cpp  MainLoop.cpp  interrupt.cpp  main-FSM.cpp  main-interrupt.cpp  main.cpp  platform.cpp  time.cpp
src/matrix/: CMakeLists.txt
src/matrix/include/: AlmostEqual.hpp  Array.hpp  Matrix.hpp  MatrixHelpers.hpp
src/matrix/test/: CMakeLists.txt  test-AlmostEqual.cpp  test-QR.cpp
src/matrix2/test/: test-Matrix.cpp
src/misc/: CMakeLists.txt
src/misc/buzzer/: README.md
src/misc/configuration/: CMakeLists.txt  README.md
src/misc/gradual-thrust-change/: README.md
src/misc/include/: ArmedManager.hpp  BiasManager.hpp  BuzzerManager.hpp  Configuration.hpp  ConfigurationManager.hpp  ESCStartupScript.hpp  GradualThrustChangeManager.hpp  LoggerValues.hpp  OutputValues.hpp  RCManager.hpp  RCValues.hpp  SensorValues.hpp  TestManager.hpp  TestMode.hpp  WPT.hpp
src/misc/src/: ArmedManager.cpp  BiasManager.cpp  BuzzerManager.cpp  Configuration.cpp  ConfigurationManager.cpp  (+9 more)
src/quaternion/: CMakeLists.txt
src/shared/: CMakeLists.txt  include  src
src/test-vivado/: CMakeLists.txt
src/tilt-correction/: CMakeLists.txt
src/time/: CMakeLists.txt  Time.cpp
src/utilities/: CMakeLists.txt
src/utilities2/: CMakeLists.txt
src/vivado-types/: CMakeLists.txt
(+228 files in other folders)
